--- a/templates/signup.html
+++ b/templates/signup.html
@@ -84,5 +84,6 @@
             <input type="submit" value="SignUp" class="btn">
         </form>
     </div>
+    <script src="/static/css/js/script.js"></script>
 </body>
 </html>
